crates/core/tests/snapshots/container_env_test__container_env__can_set_prefix.snap
---
source: crates/core/tests/container_env_test.rs
expression: pretty(container.impl_partial_env_values())
---
fn env_values_with_prefix(
    prefix: Option<&str>,
) -> std::result::Result<Option<Self>, schematic::ConfigError> {
    use schematic::internal::*;
    let mut env = EnvManager::new(prefix, Some("PREFIX_"));
    let mut partial = Self::default();
    partial.a = env.get("OVERRIDE")?;
    partial.b = env.get_prefixed("B")?;
    partial.c = env.get_prefixed("C")?;
    partial.d = env.nested(PartialNestedConfig::env_values()?)?;
    partial.e = env.nested(PartialCustomConfig::env_values()?)?;
    partial.f = env
        .nested(PartialNestedConfig::env_values_with_prefix(Some("NESTED_"))?)?;
    partial.g = env
        .nested(PartialCustomConfig::env_values_with_prefix(Some("NESTED_"))?)?;
    Ok(if env.is_empty() { None } else { Some(partial) })
}
